--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
-<!-- HTML template for the frontend react app: https://developer.mozilla.org/en-US/docs/Web/HTML -->
-<!doctype html>
+<!-- HTML template for the frontend react app: https://developer.mozilla.org/en-US/docs/Web/HTML --><!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Um incrível projeto do Skip</title>
-    <meta name="description" content="Projeto gerado usando Skip (https://goskip.dev)" />
+    <title>ProjeCam</title>
+    <meta
+      name="description"
+      content="CRM completo e eficiente para gerenciar sua empresa"
+    />
     <meta name="author" content="Skip (https://goskip.dev)" />
     <meta property="og:image" content="/og-image.png" />
+    <meta
+      name="keywords"
+      content="Camera de seguraça, Central de Segurança, Alarmes, Vigilancia Patrimonial"
+    />
   </head>
 
   <body>
